add the grid layout and 3 data card

--- a/index.html
+++ b/index.html
@@ -3,10 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
     <title>Human resources demands</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <main>
+        <h1 class="title">Human resources demands</h1>
+        <ul class="breadcrumbs">
+            <li><a href="#">Home</a></li>
+            <li class="divider">/</li>
+            <li><a href="#" class="active">Dashboard</a></li>
+        </ul>
+        <div class="info_data">
+            <div class="card">
+                <div class="head">
+                    <div>
+                        <h2>Year</h2>
+                    </div>
+                    <i class='bx bx-calendar icon'></i>
+                </div>
+                <span class="amount">100</span> 
+            </div>
+            <div class="card">
+                <div class="head">
+                    <div>
+                        <h2>Quantity</h2>
+                    </div>
+                    <i class='bx bxs-briefcase-alt-2 icon'></i>
+                </div>
+                <span class="amount">100</span> 
+            </div>
+            <div class="card">
+                <div class="head">
+                    <div>
+                        <h2>Average income</h2>
+                    </div>
+                    <i class='bx bxs-dollar-circle icon'></i>
+                </div>
+                <span class="amount">100</span> 
+            </div>
+        </div>
+    </main>
 </body>
+<script src="script.js"></script>
 </html>
