--- a/index.html
+++ b/index.html
@@ -1,50 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="style.css">
-    <title>Human resources demands</title>
-</head>
-<body>
-    <main>
-        <h1 class="title">Human resources demands</h1>
-        <ul class="breadcrumbs">
-            <li><a href="#">Home</a></li>
-            <li class="divider">/</li>
-            <li><a href="#" class="active">Dashboard</a></li>
-        </ul>
-        <div class="info_data">
-            <div class="card">
-                <div class="head">
-                    <div>
-                        <h2>Year</h2>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css'
+            rel='stylesheet'>
+        <link rel="shortcut icon" type="x-icon"
+            href="https://cdn-icons-png.flaticon.com/512/4110/4110554.png">
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+            crossorigin="anonymous">
+        <link rel="stylesheet" href="style.css">
+        <script src="https://d3js.org/d3.v7.min.js"></script>
+        <script src="script.js"></script>
+        <title>Human resources demands</title>
+    </head>
+    <body>
+        <main>
+            <h1 class="title">Human resources demands</h1>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-7">
+                        <div class="card">
+                            <div class="bar-chart">
+                                <script>barChart()</script>
+                            </div>
+                        </div>
                     </div>
-                    <i class='bx bx-calendar icon'></i>
-                </div>
-                <span class="amount">100</span> 
-            </div>
-            <div class="card">
-                <div class="head">
-                    <div>
-                        <h2>Quantity</h2>
+                    <div class="col-sm-5">
+                        <div class="card">
+                            <div class="pie-chart">
+                                <script>pieChart()</script>
+                            </div>
+                        </div>
                     </div>
-                    <i class='bx bxs-briefcase-alt-2 icon'></i>
                 </div>
-                <span class="amount">100</span> 
-            </div>
-            <div class="card">
-                <div class="head">
-                    <div>
-                        <h2>Average income</h2>
+                <div class="row info_data">
+                    <div class="col-sm">
+                        <div class="card">
+                            <div class="head">
+                                <div>
+                                    <h2>Year</h2>
+                                </div>
+                                <i class='bx bx-calendar icon'></i>
+                            </div>
+                            <span class="amount">100</span>
+                        </div>
                     </div>
-                    <i class='bx bxs-dollar-circle icon'></i>
+                    <div class="col-sm">
+                        <div class="card">
+                            <div class="head">
+                                <div>
+                                    <h2>Quantity</h2>
+                                </div>
+                                <i class='bx bxs-briefcase-alt-2 icon'></i>
+                            </div>
+                            <span class="amount">100</span>
+                        </div>
+                    </div>
+                    <div class="col-sm">
+                        <div class="card">
+                            <div class="head">
+                                <div>
+                                    <h2>Average income</h2>
+                                </div>
+                                <i class='bx bxs-dollar-circle icon'></i>
+                            </div>
+                            <span class="amount">100</span>
+                        </div>
+                    </div>
                 </div>
-                <span class="amount">100</span> 
             </div>
-        </div>
-    </main>
-</body>
-<script src="script.js"></script>
+        </main>
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous"></script>
+    </body>
 </html>
