Add slider for year

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
                             <div class="bar-chart">
                                 <script>barChart()</script>
                             </div>
+                            <div class="slider">
+                                <input id="year" class="year-slider"
+                                    type="range" value="0" step="1" min="0"
+                                    max="5">
+                                <span class="year-text">Year</span>
+                            </div>
                         </div>
                     </div>
                     <div class="col-sm-5">
@@ -46,7 +52,7 @@
                                 </div>
                                 <i class='bx bx-calendar icon'></i>
                             </div>
-                            <span class="amount">100</span>
+                            <span class="amount">1995</span>
                         </div>
                     </div>
                     <div class="col-sm">
