Handle function for slider to update charts for a selected year. Show the value on the card and Quantity. Next, i will make a legends for pie chart and replace the name of country with percentages

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                             </div>
                             <div class="slider">
                                 <input id="year" class="year-slider"
-                                    type="range" value="0" step="1" min="0"
-                                    max="5">
+                                    type="range" value="0" step="1" min=""
+                                    max="">
                                 <span class="year-text">Year</span>
                             </div>
                         </div>
@@ -52,7 +52,7 @@
                                 </div>
                                 <i class='bx bx-calendar icon'></i>
                             </div>
-                            <span class="amount">1995</span>
+                            <span class="year-number"></span>
                         </div>
                     </div>
                     <div class="col-sm">
@@ -63,7 +63,7 @@
                                 </div>
                                 <i class='bx bxs-briefcase-alt-2 icon'></i>
                             </div>
-                            <span class="amount">100</span>
+                            <span class="amount-cases"></span>
                         </div>
                     </div>
                     <div class="col-sm">
