--- a/index.html
+++ b/index.html
@@ -13,37 +13,52 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
-        <script src="https://d3js.org/d3.v7.min.js"></script>
+        <script src="https://d3js.org/d3.v6.min.js"></script>
         <script src="script.js"></script>
-        <title>Human resources demands</title>
+        <title>World Education</title>
     </head>
     <body>
-        <main>
-            <h1 class="title">Human resources demands</h1>
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-7">
-                        <div class="card">
-                            <div class="bar-chart">
-                                <script>barChart()</script>
-                            </div>
-                            <div class="slider">
-                                <input id="year" class="year-slider"
-                                    type="range" value="0" step="1" min=""
-                                    max="">
-                                <span class="year-text">Year</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-5">
-                        <div class="card">
-                            <div class="pie-chart">
-                                <script>pieChart()</script>
-                            </div>
-                        </div>
+        <header>
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href></a>
+                    <button class="navbar-toggler" type="button"
+                        data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page"
+                                    href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Features</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Pricing</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link disabled"
+                                    aria-disabled="true">Disabled</a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
-                <div class="row info_data">
+            </nav>
+        </header>
+        <main>
+            <h1 class="title">World Education Analysis</h1>
+            <div class="article">
+                <!-- Viet noi dung gioi thieu vao day -->
+            </div>
+            <div class="map-chart">
+                <script>mapChart()</script>
+            </div>
+    
+            <!-- <div class="row info_data">
                     <div class="col-sm">
                         <div class="card">
                             <div class="head">
@@ -78,8 +93,11 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </main>
+        <footer>
+
+        </footer>
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
