--- a/pages/asia.html
+++ b/pages/asia.html
@@ -12,9 +12,9 @@
             rel="stylesheet"
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous">
-        <link rel="stylesheet" href="style.css">
-        <script src="https://d3js.org/d3.v6.min.js"></script>
-        <script src="script.js"></script>
+        <script src="https://d3js.org/d3.v7.min.js"></script>
+        <script src="/scripts/scatterplot.js"></script>
+        <link rel="stylesheet" href="/style.css">
         <title>World Education</title>
     </head>
     <body>
@@ -32,10 +32,10 @@
                         <ul class="navbar-nav">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page"
-                                    href="#">Home</a>
+                                    href="/">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Features</a>
+                                <a class="nav-link" href="/pages/asia.html">Asia</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Pricing</a>
@@ -50,53 +50,9 @@
             </nav>
         </header>
         <main>
-            <h1 class="title">World Education Analysis</h1>
-            <div class="article">
-                <!-- Viet noi dung gioi thieu vao day -->
-            </div>
-            <div class="map-chart">
-                <script>mapChart()</script>
-            </div>
-    
-            <!-- <div class="row info_data">
-                    <div class="col-sm">
-                        <div class="card">
-                            <div class="head">
-                                <div>
-                                    <h2>Year</h2>
-                                </div>
-                                <i class='bx bx-calendar icon'></i>
-                            </div>
-                            <span class="year-number"></span>
-                        </div>
-                    </div>
-                    <div class="col-sm">
-                        <div class="card">
-                            <div class="head">
-                                <div>
-                                    <h2>Quantity</h2>
-                                </div>
-                                <i class='bx bxs-briefcase-alt-2 icon'></i>
-                            </div>
-                            <span class="amount-cases"></span>
-                        </div>
-                    </div>
-                    <div class="col-sm">
-                        <div class="card">
-                            <div class="head">
-                                <div>
-                                    <h2>Average income</h2>
-                                </div>
-                                <i class='bx bxs-dollar-circle icon'></i>
-                            </div>
-                            <span class="amount">100</span>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
+            
         </main>
         <footer>
-
         </footer>
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
