--- a/pages/asia.html
+++ b/pages/asia.html
@@ -14,6 +14,8 @@
             crossorigin="anonymous">
         <script src="https://d3js.org/d3.v7.min.js"></script>
         <script src="/scripts/scatterplot.js"></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
         <link rel="stylesheet" href="/style.css">
         <title>World Education</title>
     </head>
@@ -32,7 +34,7 @@
                         <ul class="navbar-nav">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page"
-                                    href="/">Home</a>
+                                    href="/pages/home.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/pages/asia.html">Asia</a>
@@ -50,7 +52,36 @@
             </nav>
         </header>
         <main>
-            
+            <h1>Math and Reading Proficiency of each level</h1>
+            <div class="btn-group">
+                <button type="button" class="btn btn-primary dropdown-toggle"
+                    data-bs-toggle="dropdown" aria-expanded="false">
+                    Educational Level
+                </button>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Grade 2-3</a></li>
+                    <li><a class="dropdown-item" href="#">Primary End</a></li>
+                    <li><a class="dropdown-item" href="#">Secondary End</a></li>
+                </ul>
+            </div>
+            <div class="btn-group">
+                <button type="button" class="btn btn-primary dropdown-toggle"
+                    data-bs-toggle="dropdown" aria-expanded="false">
+                    Continent
+                </button>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Africa</a></li>
+                    <li><a class="dropdown-item" href="#">Asia</a></li>
+                    <li><a class="dropdown-item" href="#">Europe</a></li>
+                    <li><a class="dropdown-item" href="#">North America</a></li>
+                    <li><a class="dropdown-item" href="#">South America</a></li>
+                    <li><a class="dropdown-item" href="#">Oceania</a></li>
+                </ul>
+            </div>
+            <div class="scatterplot">
+                <script>scatterPlot()</script>
+            </div>
+            <div id="scatter-tooltips"></div>
         </main>
         <footer>
         </footer>
