--- a/pages/home.html
+++ b/pages/home.html
@@ -53,6 +53,7 @@
             <h1 class="title">World Education Analysis</h1>
             <div class="article">
                 <!-- Viet noi dung gioi thieu vao day -->
+                THE GLOBAL VIEW
             </div>
             <div class="map-chart">
                 <script>mapChart()</script>
