--- a/pages/home.html
+++ b/pages/home.html
@@ -3,8 +3,6 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css'
-            rel='stylesheet'>
         <link rel="shortcut icon" type="x-icon"
             href="https://cdn-icons-png.flaticon.com/512/4110/4110554.png">
         <link
@@ -32,17 +30,19 @@
                         <ul class="navbar-nav">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page"
-                                    href="/pages//home.html">Home</a>
+                                    href="/pages/home.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/pages/asia.html">Asia</a>
+                                <a class="nav-link" href="/pages/dashboard.html">Dashboard</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Pricing</a>
+                                <a class="nav-link"
+                                    href="/pages/math_reading_profi.html">Math
+                                    and Reading Proficiency</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link disabled"
-                                    aria-disabled="true">Disabled</a>
+                                <a class="nav-link" href="#">Education
+                                    completion</a>
                             </li>
                         </ul>
                     </div>
@@ -51,6 +51,7 @@
         </header>
         <main>
             <h1 class="title">World Education Analysis</h1>
+
             <div class="article">
                 <!-- Viet noi dung gioi thieu vao day -->
             </div>
