--- a/pages/math_reading_profi.html
+++ b/pages/math_reading_profi.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <header>
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
                 <div class="container-fluid">
                     <a class="navbar-brand" href></a>
                     <button class="navbar-toggler" type="button"
@@ -29,11 +29,8 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page"
+                                <a class="nav-link" aria-current="page"
                                     href="/pages/home.html">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/pages/dashboard.html">Dashboard</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link"
