--- a/pages/math_reading_profi.html
+++ b/pages/math_reading_profi.html
@@ -47,36 +47,43 @@
             </nav>
         </header>
         <main>
-            <h1>Math and Reading Proficiency of each level</h1>
-            <div class="selection-container">
-                <div class="row row-cols-2">
-                    <div class="col">
-                        <select id="educational_level" class="form-select"
-                            aria-label="Educational Level"
-                            onchange="updateData(this.value)">
-                            <option value selected disabled>Choose educational
-                                level:</option>
-                            <option value="Primary End">Primary End</option>
-                            <option value="Secondary End">Secondary End</option>
-                        </select>
-                    </div>
-                    <div class="col">
-                        <select class="form-select" id="continentSelect"
-                            aria-label="Select Continent">
-                            <option value selected>Choose continent:</option>
-                            <option value="Africa">Africa</option>
-                            <option value="Asia">Asia</option>
-                            <option value="Europe">Europe</option>
-                            <option value="North America">North America</option>
-                            <option value="South America">South America</option>
-                            <option value="Oceania">Oceania</option>
-                        </select>
+            <div class="scatterContainer">
+                <h1>Math and Reading Proficiency of each level</h1>
+                <div class="selection-container">
+                    <div class="row row-cols-2">
+                        <div class="col">
+                            <select id="educational_level" class="form-select"
+                                aria-label="Educational Level"
+                                onchange="updateData(this.value)">
+                                <option value selected disabled>Choose
+                                    educational
+                                    level:</option>
+                                <option value="Primary End">Primary End</option>
+                                <option value="Secondary End">Secondary
+                                    End</option>
+                            </select>
+                        </div>
+                        <div class="col">
+                            <select class="form-select" id="continentSelect"
+                                aria-label="Select Continent">
+                                <option value selected>Choose
+                                    continent:</option>
+                                <option value="Africa">Africa</option>
+                                <option value="Asia">Asia</option>
+                                <option value="Europe">Europe</option>
+                                <option value="North America">North
+                                    America</option>
+                                <option value="South America">South
+                                    America</option>
+                                <option value="Oceania">Oceania</option>
+                            </select>
+                        </div>
                     </div>
                 </div>
+                <div class="scatterplot">
+                    <div id="scatter-tooltips"></div>
+                </div>
             </div>
-            <div class="scatterplot">
-            </div>
-            <div id="scatter-tooltips"></div>
         </main>
         <footer>
         </footer>
