--- a/pages/home.html
+++ b/pages/home.html
@@ -38,7 +38,7 @@
                                     and Reading Proficiency</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Education
+                                <a class="nav-link" href="/pages/education_completion.html">Education
                                     completion</a>
                             </li>
                         </ul>
