--- a/pages/math_reading_profi.html
+++ b/pages/math_reading_profi.html
@@ -38,7 +38,7 @@
                                     and Reading Proficiency</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Education
+                                <a class="nav-link" href="/pages/education_completion.html">Education
                                     completion</a>
                             </li>
                         </ul>
@@ -81,7 +81,6 @@
                     </div>
                 </div>
                 <div class="scatterplot">
-                    <div id="scatter-tooltips"></div>
                 </div>
             </div>
         </main>
